# SWAlgorithm

./: LICENSE  README.md  __init__.py  hw1.py  setup.cfg  setup.py
data/: sample-input2.txt  sample-output2.txt
src/SWAlgorithm/: hw1.py
tests/: input.txt
