[metadata]
name = SWAlgorithm
version = 1.0.0
author = Dingyao Zhang
description = SWAlgorithm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dingyaozhang/SWAlgorithm
classifiers =
    Programming Language :: Python :: 3
    License ::  GPT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
